<resources>
    <string name="viewpager">ViewPager</string>
    <string name="back">返回</string>
    <string name="base_uri">http://54.254.192.184:8080/xinwei-base-web/</string>
    <string name="app_name">豆瓣同城</string>
    <string name="distance_less">50 M以下</string>
    <string name="distance_50">50 M</string>
    <string name="diestace_100">100 M</string>
    <string name="distance_200">200 M</string>
    <string name="distance_1000">1 KM</string>
    <string name="distance_2000">2 KM</string>
    <string name="distance_more">2 KM以上</string>
    <string name="event_film">电影</string>
    <string name="event_drama">体育</string>
    <string name="event_concert">演唱会</string>
    <string name="event_lecture">讲座</string>
    <string name="event_ktv">K歌</string>
    <string name="event_other">其他</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">together</string>
    <string name="music_positive_btn">确定</string>
    <string name="music_negative_btn">取消</string>
    <string name="music_exit">退出程序</string>
    <string name="music_sure_exit">确定要退出吗?</string>
    <string name="miss_sdcard">SD卡不存在</string>
    <string name="sdcard_can_write">SD卡无法读写</string>
    <string name="network_failed">网络连接失败</string>
    <string name="home">首页</string>
    <string name="msg">消息</string>
    <string name="friend">好友</string>
    <string name="settings">设置</string>
    <string name="logout">注销</string>
    <string name="login">登录</string>
    <string name="login_succ">登录成功</string>
    <string name="user_get_failure">用户信息获取失败</string>
    <string name="login_miss_username">用户名不能为空</string>
    <string name="login_miss_password">密码不能为空</string>
    <string name="login_miss_confirm">请确认密码</string>
    <string name="login_confirm_fail">两次输入密码不同</string>
    <string name="login_fail">登陆失败</string>
    <string name="update">文字分享</string>
    <string name="register_title">用户注册</string>
    <string name="register_fail">注册失败</string>
    <string name="register_password">密码:</string>
    <string name="register_confirm">确认密码:</string>
    <string name="register_name">账号:</string>
    <string name="register_register">注册</string>
    <string name="_loading">加载中</string>
    <string name="send_message_title">发起活动</string>
    <string name="event_place">地点</string>
    <string name="event_time">时间</string>
    <string name="event_type">类型</string>
    <string name="event_description">描述</string>
    <string name="pull_to_refresh_pull_label">下拉以刷新</string>
    <string name="pull_to_refresh_release_label">松开以刷新</string>
    <string name="pull_to_refresh_refreshing_label">载入中</string>
    <string name="pull_to_refresh_tap_label">点击以刷屏</string>
    <string name="send">发布</string>
    <string name="user">用户名</string>
    <string name="fill_event_place">请填写详细活动地点</string>
    <string name="fill_event_description">请填写详细活动描述</string>
    <string name="_more">点击获取更多项</string>
    <string name="no_more">没有更多了</string>
    <string name="nearby">附近</string>
    <string name="send_by">我发布的</string>
    <string name="followed_by">我参加的</string>
    <string name="follow_me">Following</string>
    <string name="followed">Followed</string>
    <string name="follow">Follow</string>
    <string name="event_info">活动信息</string>
    <string name="participate">参加</string>
    <string name="follower">参与者</string>
    <string name="set_settings">个性设置</string>
    <string name="save">保存</string>
    <string name="max_visible">最大可视范围</string>
    <string name="fav_events">我感兴趣的话题</string>
    <string name="film">电影</string>
    <string name="concert">演唱会</string>
    <string name="eating">吃饭</string>
    <string name="singing">唱歌</string>
    <string name="locate">定位</string>
    <string name="same_user">参与用户</string>
    <string name="app_version">1.2.1</string>
    <string name="proj_name">ShareSDK</string>
    <string name="more">更多</string>
    <string name="sm_item_demo">接口</string>
    <string name="sm_item_auth">授权</string>
    <string name="sm_item_wechat">微信</string>
    <string name="sm_item_customer">自定义接口</string>
    <string name="sm_item_fl_weibo">关注新浪微博</string>
    <string name="sm_item_fl_tc">关注腾讯微博</string>
    <string name="sm_item_visit_wechat">关注官方微信</string>
    <string name="sm_item_visit_website">关注官方网站</string>
    <string name="sm_item_about">Demo版本 Ver. %s</string>
    <string name="plz_choose_wechat">请选择微信客户端完成操作</string>
    <string name="join_title">参加</string>
    <string name="interest_title">感兴趣</string>
    <string name="attend_title">签到</string>
    <string name="event_photo_title">活动照片</string>
    <string name="event_introduce_title">活动介绍</string>
    <string name="demo_share_all_gui">分享全部（有分享界面）</string>
    <string name="demo_share_all">分享全部（无界面，直接分享）</string>
    <string name="demo_get_access_token">获取AccessToken</string>
    <string name="demo_get_my_info">获取授权用户资料</string>
    <string name="demo_get_other_info">获取其他用户资料</string>
    <string name="demo_share_to_sw">分享新浪微博</string>
    <string name="demo_share_to_tc">分享腾讯微博</string>
    <string name="demo_share_to_fb">分享Facebook</string>
    <string name="demo_share_to_tw">分享twitter</string>
    <string name="demo_share_to_rr">分享人人网</string>
    <string name="demo_share_to_qz">分享QQ空间</string>
    <string name="demo_share_to_db">分享豆瓣</string>
    <string name="demo_share_to_en">分享印像笔记</string>
    <string name="demo_share_to_nemb">分享网易微博</string>
    <string name="demo_share_to_sh">分享搜狐微博</string>
    <string name="demo_share_to_kaixin">分享开心网</string>
    <string name="demo_share_to_youdao">分享有道云笔记</string>
    <string name="demo_share_to_googleplus">分享Google+</string>
    <string name="demo_share_to_foursquare">分享FourSquare</string>
    <string name="demo_share_to_linked_in">分享Linkedin</string>
    <string name="get_token_sw">获取新浪微博AccessToken</string>
    <string name="get_token_tc">获取腾讯微博AccessToken</string>
    <string name="get_token_fb">获取Facebook AccessToken</string>
    <string name="get_token_tw">获取Twitter AccessToken</string>
    <string name="get_token_rr">获取人人网AccessToken</string>
    <string name="get_token_qz">获取QQ空间AccessToken</string>
    <string name="get_token_db">获取豆瓣AccessToken</string>
    <string name="get_token_en">获取映象笔记AccessToken</string>
    <string name="get_token_nemb">获取网易微博AccessToken</string>
    <string name="get_token_sohu">获取搜狐微博AccessToken</string>
    <string name="get_token_kaixin">获取开心网AccessToken</string>
    <string name="get_token_youdao">获取有道云笔记AccessToken</string>
    <string name="get_token_googleplus">获取Google+ AccessToken</string>
    <string name="get_token_foursquare">获取FourSquare AccessToken</string>
    <string name="get_token_linked_in">Linked In AccessToken</string>
    <string name="get_user_info_sw">获取新浪微博授权用户资料</string>
    <string name="get_user_info_tc">获取腾讯微博授权用户资料</string>
    <string name="get_user_info_fb">获取Facebook授权用户资料</string>
    <string name="get_user_info_tw">获取Twitter授权用户资料</string>
    <string name="get_user_info_rr">获取人人网授权用户资料</string>
    <string name="get_user_info_qz">腾讯微博登录</string>
    <string name="get_user_info_db">获取豆瓣授权用户资料</string>
    <string name="get_user_info_nemb">获取网易微博授权用户资料</string>
    <string name="get_user_info_en">获取印象笔记授权用户资料</string>
    <string name="get_user_info_sh">获取搜狐微博授权用户资料</string>
    <string name="get_user_info_kaixin">获取开心网授权用户资料</string>
    <string name="get_user_info_youdao">获取有道云笔记授权用户资料</string>
    <string name="get_user_info_googleplus">获取Google+授权用户资料</string>
    <string name="get_user_info_foursquare">获取FourSquare授权用户资料</string>
    <string name="get_user_info_linked_in">获取Linked In授权用户资料</string>
    <string name="get_sina_friends_list">获取新浪微博关注列表</string>
    <string name="get_tencent_friends_list">获取腾讯微博关注列表</string>
    <string name="customer_douban">搜索用户</string>
    <string name="customer_facebook">获取通知列表</string>
    <string name="customer_nemb">获取推荐话题</string>
    <string name="customer_renren">上传照片到用户的相册</string>
    <string name="customer_sina">获取微博主页列表</string>
    <string name="customer_qzone">发表日志到QQ空间</string>
    <string name="customer_tencent">获取我的粉丝列表</string>
    <string name="customer_twitter">获取主页列表</string>
    <string name="customer_kaixin">获取可能认识的人</string>
    <string name="customer_sohu">获取好友列表</string>
    <string name="customer_youdao">获取笔记本列表</string>
    <string name="not_yet_authorized">尚未授权</string>
    <string name="sinaweibo">新浪微博登陆</string>
    <string name="tencentweibo">腾讯微博</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="renren">人人网</string>
    <string name="qzone">QQ空间</string>
    <string name="douban">豆瓣</string>
    <string name="evernote">印象笔记</string>
    <string name="neteasemicroblog">网易微博</string>
    <string name="wechat">微信好友</string>
    <string name="wechatmoments">微信朋友圈</string>
    <string name="sohumicroblog">搜狐微博</string>
    <string name="kaixin">开心网</string>
    <string name="youdao">有道云笔记</string>
    <string name="googleplus">Google+</string>
    <string name="foursquare">FourSquare</string>
    <string name="cancel">取消</string>
    <string name="share_content">ShareSDK for Android不仅集成简单、支持如QQ好友、微信、新浪微博、腾讯微博等所有社交平台，而且还有强大的统计分析管理后台，实时了解用户、信息流、回流率、传播效应等数据，详情见官网http://sharesdk.cn @ShareSDK</string>
    <string name="share_content_short">ShareSDK不仅集成简单、支持如微信、新浪微博、腾讯微博等社交平台，而且还有强大的统计分析管理后台，实时了解用户、信息流、回流率、传播效应等数据，详情见官网http://sharesdk.cn @ShareSDK</string>
    <string name="evenote_title">这是一个神奇的SDK</string>
    <string name="sharing">分享操作正在后台进行...</string>
    <string name="share_to">分享到</string>
    <string name="share">分享</string>
    <string name="multi_share">图文分享</string>
    <string name="changing_fragments">心语分享</string>
    <string name="image_upload">图片分享（本地图片）</string>
    <string name="image_upload_bitmap">图片分享（Bitmap对象）</string>
    <string name="music_upload">音乐分享</string>
    <string name="video_upload">视频分享</string>
    <string name="webpage_upload">网页分享（本地图片）</string>
    <string name="webpage_upload_bitmap">网页分享（Bitmap对象）</string>
    <string name="app_upload">应用分享</string>
    <string name="file_upload">文件分享</string>
    <string name="share_to_moment">分享到朋友圈</string>
    <string name="wechat_demo_title">微信分享Demo标题</string>
    <string name="qzone_add_blog_sample"><h1>QQ互联</h1><font color="red">轻松分享,</font><font color="green">快乐生活。</font><a href="http://connect.qq.com">详情请看。</a><img src="http://imgcache.qq.com/ptlogin/head/1_100.gif"></img></string>
    <string name="hello">正在加载数据，请稍候...</string>
    <string name="producename">豆瓣同城</string>
    <string name="tab_host_label">一周热点</string>
    <string name="tab_categroy_label">浏览搜索</string>
    <string name="tab_describe_label">我的活动</string>
    <string name="tab_myevent_label">我的活动</string>
    <string name="event_label_interest">感兴趣</string>
    <string name="event_label_joined">参加</string>
    <string name="event_label_closed">天结束</string>
    <string name="categtoy_title">活动浏览</string>
    <string name="change_city_title">选择城市</string>
    <string name="default_city_name">北京</string>
    <string name="myevent_join">要参加</string>
    <string name="myevent_interest">感兴趣</string>
    <string name="myevent_take">已到场</string>
    <string name="myevent_title">我的活动</string>
    <string name="pull_refresh_up">松开刷新</string>
    <string name="pull_refresh_down">下拉来刷新</string>
    <string name="pull_refresh_load">正在获取数据</string>
    <string name="event_detail_title">活动详情</string>
    <string name="event_large_poster">活动海报</string>
    <string name="user_profile_personal_signature">有什么想说给附近的朋友听？</string>
    <string name="user_profile_default_website">填写更多的介绍，让大家认识你了解你</string>
    <string name="user_profile_default_hangout">填写你常出没的城市和街区</string>
    <string name="user_profile_default_interest">填写你喜欢些什么，对什么特别有兴趣</string>
    <string name="user_profile_default_company">请填写你所在的公司</string>
    <string name="user_profile_default_school">请填写你就读的学校</string>
</resources>