<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="fill_parent"    android:layout_height="fill_parent"    android:background="@color/GhostWhite"    android:orientation="vertical"    tools:context=".LoginActivity" >    <LinearLayout        android:layout_width="fill_parent"        android:layout_height="43dp"        android:layout_gravity="center"        android:background="@color/deepSkyBlue"        android:gravity="center"        android:orientation="horizontal" >        <TextView            android:layout_width="fill_parent"            android:layout_height="wrap_content"            android:layout_gravity="center"            android:gravity="center"            android:text="@string/login"            android:textColor="@color/white"            android:textSize="18sp" />    </LinearLayout>    <LinearLayout        android:layout_width="fill_parent"        android:layout_height="fill_parent"        android:background="@color/GhostWhite"        android:orientation="vertical" >        <LinearLayout            android:layout_width="fill_parent"            android:layout_height="wrap_content"            android:orientation="vertical" >            <LinearLayout                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:paddingLeft="10dp"                android:paddingTop="10dp" >                <TextView                    android:layout_width="110dp"                    android:layout_height="wrap_content"                    android:gravity="center_horizontal"                    android:paddingRight="10dp"                    android:text="@string/register_name"                    android:textColor="@color/blacks" />                <EditText                    android:id="@+id/login_account"                    android:layout_width="150dp"                    android:layout_height="wrap_content"                    android:layout_weight="3.07"                    android:inputType="textNoSuggestions"                    android:maxLength="16"                    android:paddingLeft="10dp" />            </LinearLayout>            <LinearLayout                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:paddingLeft="10dp"                android:paddingTop="10dp" >                <TextView                    android:layout_width="110dp"                    android:layout_height="wrap_content"                    android:gravity="center_horizontal"                    android:paddingRight="10dp"                    android:text="@string/register_password"                    android:textColor="@color/blacks" />                <EditText                    android:id="@+id/login_password"                    android:layout_width="150dp"                    android:layout_height="wrap_content"                    android:inputType="textPassword"                    android:maxLength="16"                    android:paddingLeft="10dp" />            </LinearLayout>        </LinearLayout>        <LinearLayout            android:layout_width="fill_parent"            android:layout_height="wrap_content"            android:gravity="center"            android:paddingLeft="10dp"            android:paddingTop="50dp" >            <TextView                android:id="@+id/login_login"                android:layout_width="120dp"                android:layout_height="wrap_content"                android:background="@drawable/txt_style"                android:gravity="center"                android:padding="5dp"                android:text="@string/login"                android:textColor="@color/blacks"                android:textSize="20sp" />            <TextView                android:layout_width="30dp"                android:layout_height="wrap_content"                android:gravity="center"                android:padding="5dp"                android:textSize="20sp" />            <TextView                android:id="@+id/login_register"                android:layout_width="120dp"                android:layout_height="wrap_content"                android:background="@drawable/txt_style"                android:gravity="center"                android:padding="5dp"                android:text="@string/register_register"                android:textColor="@color/blacks"                android:textSize="20dp" />        </LinearLayout>        <LinearLayout            android:layout_width="fill_parent"            android:layout_height="wrap_content"            android:paddingLeft="20dp"            android:paddingRight="10dp"            android:paddingTop="50dp" >            <ImageView                android:layout_width="50dp"                android:layout_height="30dp"                android:layout_gravity="center_vertical"                android:layout_marginRight="10dp"                android:scaleType="centerInside"                android:src="@drawable/logo_sinaweibo" />            <TextView                android:id="@+id/sinaweibo"                android:layout_width="match_parent"                android:layout_height="fill_parent"                android:layout_gravity="center_vertical"                                android:gravity="center_vertical"                android:layout_margin="5dp"                             android:text="@string/sinaweibo"                android:textColor="#ff000000"                android:textSize="16sp" />        </LinearLayout>        <LinearLayout            android:layout_width="fill_parent"            android:layout_height="wrap_content"            android:paddingLeft="20dp"            android:paddingRight="10dp"            android:paddingTop="20dp" >            <ImageView                android:layout_width="50dp"                android:layout_height="30dp"                android:layout_marginRight="10dp"                android:scaleType="centerInside"                android:src="@drawable/logo_tencentweibo" />            <TextView                android:id="@+id/btnQz"                android:layout_width="match_parent"                android:layout_height="fill_parent"                android:layout_gravity="center_vertical"                android:gravity="center_vertical"                android:layout_margin="5dp"                android:text="@string/get_user_info_qz"                android:textColor="#ff000000"                android:textSize="16sp" />        </LinearLayout>    </LinearLayout></LinearLayout>